--- a/frontend/nestin/src/app/components/PropertyDetails/rating-header/rating-header.component.html
+++ b/frontend/nestin/src/app/components/PropertyDetails/rating-header/rating-header.component.html
@@ -19,7 +19,7 @@
   </div>
 
   <div class="favorite-badge" *ngIf="isHighlyRated">
-    <span class="emoji">😊</span>
+    <lucide-icon [name]="icons.award" size="18" class="fav-icon"></lucide-icon>
     <span>Guest favorite</span>
   </div>
 </div>
