--- a/frontend/nestin/src/app/pages/property-info-page/property-info.component.html
+++ b/frontend/nestin/src/app/pages/property-info-page/property-info.component.html
@@ -1,3 +1,17 @@
+
+<div *ngIf="loading" class="d-flex justify-content-center my-5">
+  <div class="spinner-border text-primary" role="status">
+    <span class="visually-hidden">Loading...</span>
+  </div>
+</div>
+
+<div *ngIf="error" class="alert alert-danger text-center my-5">
+  Error loading property details. Please try again later.
+</div>
+
+
+
+
 <div *ngIf="!loading && !error">
   <div class="d-flex flex-wrap justify-content-between">
     <h1>{{ property?.title }}</h1>
@@ -73,7 +87,7 @@
   </ng-container>
 
   <div class="row">
-    <div class="col-12 col-md-8">
+    <div class="col-12 col-md-7">
       <app-property-header [property]="property"></app-property-header>
       <app-rating-header [property]="property"></app-rating-header>
       <app-property-availability
@@ -87,7 +101,7 @@
         [propertyId]="propertyId"></app-property-aminities>
       <app-things-to-know [property]="property"></app-things-to-know>
     </div>
-    <div class="col-12 col-md-4 mb-3">
+    <div class="col-12 col-md-5 mb-3 sticky-top" style="top: 100px;">
       <app-booking-card [property]="property"></app-booking-card>
     </div>
   </div>
