--- a/frontend/nestin/src/app/pages/property-info-page/property-info.component.scss
+++ b/frontend/nestin/src/app/pages/property-info-page/property-info.component.scss
@@ -1,3 +1,9 @@
+
+.spinner-border {
+  width: 3rem;
+  height: 3rem;
+}
+
 .property-container {
   max-width: 1200px;
   margin: 0 auto;
@@ -187,6 +193,17 @@
   }
 }
 
-/* favorite button */
-/* .favorite-button-container {
-} */
+// sticky booking card 
+.sticky-top {
+  position: -webkit-sticky;
+  position: sticky;
+  align-self: flex-start; 
+  overflow-y: auto; 
+}
+
+/* Mobile behavior - disable sticky */
+@media (max-width: 767.98px) {
+  .sticky-top {
+    position: static;
+  }
+}
