--- a/frontend/nestin/src/app/components/Profile/profile-prompt/profile-prompt.component.html
+++ b/frontend/nestin/src/app/components/Profile/profile-prompt/profile-prompt.component.html
@@ -32,6 +32,12 @@
       </button>
     </div>
 
+    <div *ngIf="showButtonForHost()" class="admin-button-container">
+      <button class="approve-button" (click)="handleHostAction()">
+         Add Property
+      </button>
+    </div>
+
 
   </div>
   </div>
