--- a/frontend/nestin/src/app/pages/upgradeToHost/upgrade-tohost/upgrade-tohost.component.html
+++ b/frontend/nestin/src/app/pages/upgradeToHost/upgrade-tohost/upgrade-tohost.component.html
@@ -136,13 +136,13 @@
             Submit Verification
           </button>
 
-          <div *ngIf="submissionSuccess" class="success-message">
+          <!-- <div *ngIf="submissionSuccess" class="success-message">
             Verification submitted successfully! We'll review your documents and notify you soon.
           </div>
           
           <div *ngIf="submissionError" class="error-message">
             {{ submissionError }}
-          </div>
+          </div> -->
 
         </div>
       </form>
