--- a/frontend/nestin/src/app/pages/host-upgrade-approval/host-upgrade-aproval.component.css
+++ b/frontend/nestin/src/app/pages/host-upgrade-approval/host-upgrade-aproval.component.css
@@ -339,6 +339,9 @@
   align-items: center;
   z-index: 2000;
   padding: 20px;
+  overflow: auto;
+ 
+
 }
 
 .modal-container {
@@ -385,9 +388,11 @@
 
 /* Document Photos */
 .document-photos {
-  /* margin-top: 30px; */
+  margin-top: 0;
   /* padding: 20px 20px; */
   
+height: auto;
+
   h4 {
     /* padding-left: 20px; */
     margin-bottom: 15px;
@@ -417,6 +422,7 @@
   border: 1px solid #ddd;
   border-radius: 6px;
   overflow: hidden;
+  height: 200px;
 }
 
 .document-photo {
@@ -726,7 +732,7 @@
 }
 
 .info-group{
-margin-bottom: 20px;
+/* margin-bottom: 20px; */
 padding-bottom: 20px;
 border-bottom: solid 1px #ddd;
 }
