--- a/frontend/nestin/src/app/components/Profile/profile-prompt/profile-prompt.component.html
+++ b/frontend/nestin/src/app/components/Profile/profile-prompt/profile-prompt.component.html
@@ -28,7 +28,7 @@
 
     <div *ngIf="showButtonForAdmin()" class="admin-button-container">
       <button class="approve-button" (click)="handleAdmintAction()">
-          Approve Requests
+          Admin Dashboard
       </button>
     </div>
 
