--- a/frontend/nestin/src/app/pages/booking-history/booking-history.component.html
+++ b/frontend/nestin/src/app/pages/booking-history/booking-history.component.html
@@ -237,11 +237,12 @@
                   >
                     Cancel
                   </button>
-                  <button
-                    class="px-4 py-2 bg-primary-600 text-white rounded-lg hover:bg-primary-700 transition-colors"
-                  >
+                  <a  class="px-4 py-2 bg-primary-600 text-white rounded-lg hover:bg-primary-700 transition-colors btn" [routerLink]="['/booking',bookings[0].id]">
+
+                   
+                  
                     View Details
-                  </button>
+                  </a>
                 </div>
               </div>
             </div>
